Working toward getting login working (with Mozilla Persona.)